change read-me to guide correctly the dev to startup the application and other fixes in order to run the application, the game seems not playable yet tho

--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -24,6 +24,9 @@
     "moment": "2.24.0",
     "screenfull": "2.0.0"
   },
+  "resolutions": {
+    "graceful-fs": "^4.2.10"
+  },
   "devDependencies": {
     "dataurl": "^0.1.0",
     "gulp": "^3.9.0",
