--- a/packages/colonizers/docker/docker-compose.yml
+++ b/packages/colonizers/docker/docker-compose.yml
@@ -1,57 +1,67 @@
-colonizers1:
-  image: colonizers/colonizers:latest
-  environment:
-    - COLONIZERS_RABBITMQ_QUEUE=colonizers1
-  links:
-    - mongo
-    - rabbitmq
-  ports:
-    - 3001:8080
-  volumes:
-    - ../server:/usr/src/app/server
+# colonizers1:
+#   image: colonizers/colonizers:latest
+#   environment:
+#     - COLONIZERS_RABBITMQ_QUEUE=colonizers1
+#   links:
+#     - mongo
+#     - rabbitmq
+#   ports:
+#     - 3001:8080
+#   volumes:
+#     - ../server:/usr/src/app/server
 
-colonizers2:
-  image: colonizers/colonizers:latest
-  environment:
-    - COLONIZERS_RABBITMQ_QUEUE=colonizers2
-  links:
-    - mongo
-    - rabbitmq
-  ports:
-    - 3002:8080
-  volumes:
-    - ../server:/usr/src/app/server
+# colonizers2:
+#   image: colonizers/colonizers:latest
+#   environment:
+#     - COLONIZERS_RABBITMQ_QUEUE=colonizers2
+#   links:
+#     - mongo
+#     - rabbitmq
+#   ports:
+#     - 3002:8080
+#   volumes:
+#     - ../server:/usr/src/app/server
 
-colonizers3:
-  image: colonizers/colonizers:latest
-  environment:
-    - COLONIZERS_RABBITMQ_QUEUE=colonizers3
-  links:
-    - mongo
-    - rabbitmq
-  ports:
-    - 3003:8080
-  volumes:
-    - ../server:/usr/src/app/server
+# colonizers3:
+#   image: colonizers/colonizers:latest
+#   environment:
+#     - COLONIZERS_RABBITMQ_QUEUE=colonizers3
+#   links:
+#     - mongo
+#     - rabbitmq
+#   ports:
+#     - 3003:8080
+#   volumes:
+#     - ../server:/usr/src/app/server
 
 mongo:
   image: mongo:latest
+  ports:
+    - 27017:27017
 
 rabbitmq:
   image: rabbitmq:management
   hostname: rabbitmq
+  ports:
+    - 15671:15671
+    - 15691:15691
+    - 15692:15692
+    - 25672:25672
+    - 4369:4369
+    - 5671:5671
+    - 5672:5672
   environment:
     - RABBITMQ_NODENAME=colonizers
 
 nginx:
   image: nginx:latest
   links:
-    - colonizers1
-    - colonizers2
-    - colonizers3
+    #   - colonizers1
+    #   - colonizers2
+    #   - colonizers3
     - rabbitmq
   ports:
     - 3000:3000
     - 15672:15672
   volumes:
-    - nginx.conf:/etc/nginx/nginx.conf:ro
+    - nginx.conf:/etc/nginx
