--- a/packages/colonizers/.eslintrc
+++ b/packages/colonizers/.eslintrc
@@ -1,20 +1,23 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true,
-        "node": true
-    },
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
 
-    "rules": {
-        "no-underscore-dangle": 0,
+  "rules": {
+    "no-underscore-dangle": 0,
 
-        "quotes": [2, "single"],
-        "strict": [2, "global"],
+    "quotes": [2, "double"],
+    "strict": [2, "global"],
 
-        "consistent-return": 0,
+    "consistent-return": 0,
 
-        "space-in-parens": [2, "never"],
-        "indent": [2, 2],
-        "linebreak-style": [2, "unix"]
-    }
+    "space-in-parens": [2, "never"],
+    "indent": [2, 2],
+    "linebreak-style": [2, "windows"]
+  },
+  "parserOptions": {
+    "sourceType": "module"
+  }
 }
