--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -7,44 +7,48 @@
   "description": "",
   "homepage": "http://colonizers.github.io",
   "repository": "git://github.com/colonizers/colonizers",
-  "main": "server/index.js",
   "scripts": {
     "dev": "concurrently --kill-others \"yarn start\" \"webpack-dev-server --open\"",
-    "start": "node server/index.js",
-    "test": "lab --verbose --lint"
+    "build": "tsc",
+    "start": "node server/index.ts",
+    "test": "lab --verbose --lint",
+    "dev-ts": "npm run nodemon:build",
+    "nodemon:build": "nodemon --exec ./node_modules/.bin/ts-node -- ./server/index.ts"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@hapi/basic": "7.0.0",
+    "@hapi/boom": "^10.0.0",
+    "@hapi/cookie": "12.0.0",
+    "@hapi/good": "^9.0.1",
+    "@hapi/good-console": "^9.0.1",
+    "@hapi/hapi": "^21.0.0",
+    "@hapi/inert": "^7.0.0",
+    "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^7.0.0",
+    "@types/hapi": "^18.0.7",
+    "@types/hapi__hapi": "^20.0.13",
     "bcryptjs": "^2.4.3",
-    "boom": "^5.2.0",
     "bootstrap": "3.3.5",
     "component-emitter": "^1.2.0",
-    "good": "^7.3.0",
-    "good-console": "^6.4.1",
-    "handlebars": "^4.0.3",
-    "hapi": "^16.7.0",
-    "hapi-auth-basic": "^4.2.0",
-    "hapi-auth-cookie": "^7.1.0",
-    "hapi-context-credentials": "^2.0.0",
     "hapi-io": "^0.2.1",
     "hoek": "^4.2.1",
-    "inert": "^3.0.2",
-    "joi": "^10.6.0",
     "jquery": "3.4.1",
     "knockout": "3.5.0",
     "lout": "^7.2.0",
     "moment": "2.24.0",
-    "mongoose": "^5.6.4",
+    "mongoose": "^6.7.2",
     "node-uuid": "^1.4.3",
     "rabbus": "^0.4.3",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "sweetalert": "^1.1.0",
-    "vision": "^3.0.0",
-    "wascally": "^0.2.7"
+    "wascally": "^0.2.7",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "concurrently": "^4.1.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -53,8 +57,20 @@
     "gulp-replace": "^0.5.4",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
     "raw-loader": "^3.1.0",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "nodemon": "^2.0.20",
+    "@types/hapi__boom": "^9.0.1",
+    "@types/hapi__inert": "^5.2.3",
+    "@types/hapi__joi": "^17.1.8",
+    "@types/hapi__basic": "^5.1.2",
+    "@types/hapi__vision": "^5.5.3",
+    "@types/hapi__cookie": "^12.0.0",
+    "@types/hammerjs": "^2.0.41"
   }
 }
