--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -25,7 +25,6 @@
     "@hapi/good-console": "^9.0.1",
     "@hapi/hapi": "^21.0.0",
     "@hapi/inert": "^7.0.0",
-    "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^7.0.0",
     "@types/hapi": "^18.0.7",
     "@types/hapi__hapi": "^20.0.13",
@@ -34,6 +33,7 @@
     "component-emitter": "^1.2.0",
     "hapi-io": "^0.2.1",
     "hoek": "^4.2.1",
+    "joi": "^17.7.0",
     "jquery": "3.4.1",
     "knockout": "3.5.0",
     "lout": "^7.2.0",
@@ -67,7 +67,6 @@
     "nodemon": "^2.0.20",
     "@types/hapi__boom": "^9.0.1",
     "@types/hapi__inert": "^5.2.3",
-    "@types/hapi__joi": "^17.1.8",
     "@types/hapi__basic": "^5.1.2",
     "@types/hapi__vision": "^5.5.3",
     "@types/hapi__cookie": "^12.0.0",
